--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,8 @@ services:
       - "443:443"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - ./traefik.toml:/traefik.toml
+      # Use the correct file for development or production
+      - ./local.traefik.toml:/traefik.toml
       - ./acme.json:/acme.json
     container_name: traefik
 
